# git-badc0de

./: CONTRIBUTING.md  LICENSE  README.md  git-badc0de.cabal
cbits/: sha1.c
src/: Main.hs
