cabal-version:      2.4
name:               git-badc0de
version:            0
synopsis:           Make git commits with pretty hashes
description:        Make git commits with pretty hashes.
category:           Development, Joke
license:            BSD-3-Clause
license-file:       LICENSE
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
extra-source-files:
  cbits/sha1.h
  README.md

source-repository head
  type:     git
  location: https://github.com/phadej/git-badc0de.git

executable git-badc0de
  default-language: Haskell2010
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts "-with-rtsopts=-N16 -A128M -qg"
  c-sources:        cbits/sha1.c
  include-dirs:     cbits
  hs-source-dirs:   src
  build-depends:
    , async              ^>=2.2.2
    , base               ^>=4.12.0.0
    , base16-bytestring  ^>=0.1.1.7
    , bytestring         ^>=0.10.8.2
    , cryptohash-sha1    ^>=0.11.100.1
    , directory          ^>=1.3.3.0
    , filepath           ^>=1.4.2.1
    , primitive          ^>=0.7.1.0
    , process            ^>=1.6.5.0
    , utf8-string        ^>=1.0.1.1
    , zlib               ^>=0.6.2.1
